fix: floating action button z-index

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
   position: fixed;
   right: 48px;
   bottom: 48px;
-  z-index: 10000;
+  z-index: 999;
 
   height: 48px;
   width: 48px;
